# Jerk_Bounded_Speed_Planning

./: CMakeLists.txt  LICENSE  README.md  main.cpp  opt_jerk_osqp.cpp  opt_jerk_piqp.cpp
include/: DP_speed_planner.h  astar_node.h  astar_planner.h  base_node.h  hastar_node.h  hastar_planner.h  node_util.h  optimizer.h  scenario_generator.h  utils.h
include/solver/: base_solver.h  qp_solver_osqp.h  qp_solver_piqp.h
result/: Opt_vel.csv  Opt_vel_piqp.csv
script/: visualize.py
src/: DP_speed_planner.cpp  astar_node.cpp  astar_planner.cpp  base_node.cpp  hastar_node.cpp  hastar_planner.cpp  main.cpp  node_util.cpp  obstacle.cpp  optimizer.cpp  scenario_generator.cpp  utils.cpp
src/solver/: qp_solver_osqp.cpp  qp_solver_piqp.cpp
